modified work-list ul*3 to ul use flex-wrap:wrap

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                 <li>2016-2020 年累積的作品</li>
                 <li>海報/廣告/攝影/LOGO/3D</li>
             </ul>
-            <ul class="work-col-3">
+            <ul class="work-list">
                 <li>
                     <img src="https://hexschool.github.io/webLayoutTraining1st/week2/work_img1.png" alt="work_img1.png">
                     <p>海報設計/2017</p>
@@ -74,8 +74,6 @@
                     <img src="https://hexschool.github.io/webLayoutTraining1st/week2/work_img3.png" alt="work_img3.png">
                     <p>海報設計/2018</p>
                 </li>
-            </ul>
-            <ul class="work-col-2">
                 <li>
                     <img src="https://hexschool.github.io/webLayoutTraining1st/week2/work_img4.png" alt="work_img4.png">
                     <p>概念攝影/2018</p>
@@ -84,8 +82,6 @@
                     <img src="https://hexschool.github.io/webLayoutTraining1st/week2/work_img5.png" alt="work_img5.png">
                     <p>概念攝影/2018</p>
                 </li>
-            </ul>
-            <ul class="work-col-3">
                 <li>
                     <img src="https://hexschool.github.io/webLayoutTraining1st/week2/work_img6.png" alt="work_img6.png">
                     <p>sasa 酒標設計/2019</p>
